--- a/waagreen/pom.xml
+++ b/waagreen/pom.xml
@@ -110,6 +110,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.10</version>
+        </dependency>
     </dependencies>
 	<build>
 		<plugins>
