--- a/waagreen/src/main/resources/application.properties
+++ b/waagreen/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:~/attendancedb
+spring.datasource.url=jdbc:h2:mem:efrem
 spring.jpa.properties.hibernate.hbm2ddl.import_files=sql/data.sql,sql/code.sql,sql/student.sql,sql/course_student.sql,sql/attendance.sql
 
 # ==============================================================
