--- a/waagreen/pom.xml
+++ b/waagreen/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.10</version>
         </dependency>
+        <dependency>
+    <groupId>org.apache.tomcat.embed</groupId>
+    <artifactId>tomcat-embed-jasper</artifactId>
+    <scope>provided</scope>
+</dependency>
     </dependencies>
 	<build>
 		<plugins>
